# rust-rest

./: .env  Cargo.toml
migrations/: 20240603135950_init.down.sql  20240603135950_init.up.sql
src/: db.rs  error.rs  lib.rs  main.rs  model.rs  route.rs  state.rs
tests/: db_test.rs
